WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305797
Address unsafe cast warnings in Source/WebCore/Modules
https://bugs.webkit.org/show_bug.cgi?id=305797
Summary
Address unsafe cast warnings in Source/WebCore/Modules
Chris Dumez
Reported
2026-01-19 16:10:22 PST
Address unsafe cast warnings in Source/WebCore/Modules.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-19 16:11:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56859
EWS
Comment 2
2026-01-19 20:54:55 PST
Committed
305846@main
(9249f978b803): <
https://commits.webkit.org/305846@main
> Reviewed commits have been landed. Closing PR #56859 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-19 20:55:14 PST
<
rdar://problem/168477123
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug