Address unsafe cast warnings in Source/WebCore/Modules https://bugs.webkit.org/show_bug.cgi?id=305797

Reviewed by Mike Wyrzykowski and Darin Adler.

* Source/WebCore/Modules/Model/Implementation/DDMeshImpl.h:
(isType):
* Source/WebCore/Modules/Model/Implementation/ModelDowncastConvertToBackingContext.cpp:
(WebCore::DDModel::DowncastConvertToBackingContext::convertToBacking):
* Source/WebCore/Modules/Model/InternalAPI/DDMesh.h:
(WebCore::DDModel::DDMesh::isDDMeshImpl const):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUBindGroupImpl.cpp:
(WebCore::WebGPU::BindGroupImpl::updateExternalTextures):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUXRBindingImpl.cpp:
(WebCore::WebGPU::XRBindingImpl::getViewSubImage):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCRtpReceiverBackend.cpp:
(WebCore::LibWebRTCRtpReceiverBackend::createSource):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.cpp:
(WebCore::addToStatsMap):
* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:

Canonical link: https://commits.webkit.org/305846@main