Source/WebCore/Modules/Model/Implementation/DDMeshImpl.h
@@ -70,6 +70,8 @@ private:
     DDMeshImpl& operator=(const DDMeshImpl&) = delete;
     DDMeshImpl& operator=(DDMeshImpl&&) = delete;
 
+    bool isDDMeshImpl() const final { return true; }
+
     void setLabelInternal(const String&) final;
     void update(const DDUpdateMeshDescriptor&) final;
     void updateTexture(const DDUpdateTextureDescriptor&) final;
@@ -90,5 +92,9 @@ private:
 };
 
 }
+
+SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::DDModel::DDMeshImpl)
+    static bool isType(const WebCore::DDModel::DDMesh& mesh) { return mesh.isDDMeshImpl(); }
+SPECIALIZE_TYPE_TRAITS_END()
 
 #endif // HAVE(WEBGPU_IMPLEMENTATION)
